After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 689336 - webmmux: can't link webmux to shout2send
webmmux: can't link webmux to shout2send
Status: VERIFIED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
1.x
Other Linux
: Normal normal
: 1.0.4
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-11-30 10:04 UTC by jannis-lists
Modified: 2012-11-30 17:46 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GST_DEBUG=5 logfile, gzipped because of size limitation (106.40 KB, application/x-gzip)
2012-11-30 10:05 UTC, jannis-lists
Details

Description jannis-lists 2012-11-30 10:04:15 UTC
using gstreamer-1.0.3 (not yet in bugzilla?)

oggmux can be connected to shout2send, but webmmux cannot: http://dpaste.com/hold/839341/

Using GST_DEBUG=5 one can see this: http://dpaste.com/hold/839342/

full output is attached
Comment 1 jannis-lists 2012-11-30 10:05:18 UTC
Created attachment 230265 [details]
GST_DEBUG=5 logfile, gzipped because of size limitation
Comment 2 jannis-lists 2012-11-30 10:10:47 UTC
Attached logfile is mirrored (umcompressed) for easy viewing here: http://kripton.kripserver.net/n0th1ng/gst.log.txt
Comment 3 jannis-lists 2012-11-30 10:13:30 UTC
pipeline used to create the logfile:
gst-launch-1.0 videotestsrc ! vp8enc ! webmmux ! shout2send
Comment 4 Tim-Philipp Müller 2012-11-30 10:47:54 UTC
Version 1.0.3 added now, sorry (the gnome ftp server upload script should add that automatically).

What's the output of

     dpkg -l libshout*

?

Also see bug #669590 .
Comment 5 jannis-lists 2012-11-30 12:21:00 UTC
Since I'm on gentoo, the output is "command not found". Here's what you want to know:
kripton@miramis ~/bench $ eix -eI libshout
[I] media-libs/libshout
     Available versions:  2.3.1 {speex static-libs theora}
     Installed versions:  2.3.1(17:16:43 10/07/12)(speex theora -static-libs)

I know the other bug since I wanted to get webm-streaming to work with gstreamer-0.10.35 and for that I had to patch shout2send manually to support webm. I failed since vp8enc-0.10.22 (used with gstreamer-0.10.35) was totally broken and didn't produce any output at all (not related to shout2send). This is the reason I upgraded to gst-1.0.

However after I patched shout2send from gst-0.10.35 manually, the pipeline switched to "ROLLING" state. So it means the pads where compatible back then but it didn't work due to the vp8enc-problem. I didn't search too long since the version is really old and upgrading looked like the better solution to me.
Comment 6 Tim-Philipp Müller 2012-11-30 12:31:43 UTC
Sorry, no idea why I assumed you were on ubuntu/debian.

How about this:

 grep SHOUT_FORMAT_WEBM /usr/include/shout*/*.h

?

(or whatever the default prefix for includes is)
Comment 7 jannis-lists 2012-11-30 12:40:53 UTC
Looks good to me:
kripton@miramis ~ $ grep SHOUT_FORMAT_WEBM /usr/include/shout*/*.h
/usr/include/shout/shout.h:#define SHOUT_FORMAT_WEBM    (2)

and according to the patch, shout2send shouldn't advertise "video/webm"-capability if it weren't defined in libshout. complete output of "gst-inspect-1.0" is here: http://dpaste.com/hold/839389/
Comment 8 Tim-Philipp Müller 2012-11-30 12:53:39 UTC
You're right, and there seems to be something else going on according to the log. Will have a look..
Comment 9 Tim-Philipp Müller 2012-11-30 17:26:40 UTC
Should be fixed in the next release, sorry about that, very subtle bug.

commit 81b9e197df07e300daa754f652086f45c7b6395d
Author: Tim-Philipp Müller <tim.muller@collabora.co.uk>
Date:   Fri Nov 30 17:22:59 2012 +0000

    shout2send: accept audio/webm as well as video/webm
    
    https://bugzilla.gnome.org/show_bug.cgi?id=689336

commit 672ab8fb5b653b5b64d8d596b5a5c24819d2ed32
Author: Tim-Philipp Müller <tim.muller@collabora.co.uk>
Date:   Fri Nov 30 17:20:18 2012 +0000

    webmux: fix linking with shout2send element
    
    Shout2send only accepts webm format, not matroska, but due
    to a bug in matroskamux, webmmux's source pad is also created
    with the matroska source pad template as pad template, which
    makes the link function think it can't link webmmux to shout2send.
    
    Also add unit test.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=689336
Comment 10 jannis-lists 2012-11-30 17:46:49 UTC
Applied locally and verified to fix the issue. Thanks :)
No need to excuse, I'm happy that gst exists and bugs are fixed so fast